# starstream-run

./: Cargo.toml  README.md  example.star  flake.nix  netlify.toml  rust-toolchain.toml
crates/cli/: Cargo.toml
crates/cli/src/: codec.rs  lib.rs
crates/cli/tests/: score.rs
crates/cli/tests/score/: Cargo.toml
crates/cli/tests/score/src/: lib.rs
crates/cli/tests/score/wit/: world.wit
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/runtime/tests/: score.rs
crates/test-components/: Cargo.toml  build.rs
crates/test-components/src/: lib.rs
crates/web/: Cargo.toml  build.rs  package.json  pnpm-lock.yaml  repro.mjs  serve.mjs  test-local.mjs  test-remote.mjs
crates/web/src/: fiber.rs  lib.rs  wasmtime.rs
crates/web/web/: .gitignore  contract.worker.js  fiber-env.js  index.html  wrpc.js
examples/components/score/: build.rs
examples/components/score/src/: lib.rs
