[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = { version = "1.0.102", default-features = false }
clap = { version = "4.6.1", default-features = false }
console_error_panic_hook = { version = "0.1.7", default-features = false }
cranelift-codegen = { git = "https://github.com/bytecodealliance/wasmtime", rev = "57fdb23fa7f9952b8c867347e2b18f59618c74ce", default-features = false } # keep in sync with `wasmtime` — must be the same package instance for the thread-local profiler override to apply
serde = { version = "1.0.228", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = { version = "1.0.150", default-features = false, features = [
    "alloc",
] }
starstream-run = { version = "0.1.0", path = "crates/runtime" }
tracing = { version = "0.1.44", default-features = false }
tracing-subscriber = { version = "0.3.23", default-features = false }
wasi-preview1-component-adapter-provider = { version = "45.0.1", default-features = false }
wasm-bindgen = { version = "=0.2.105", default-features = false }
wasmparser = { version = "0.240.0", default-features = false }
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", rev = "57fdb23fa7f9952b8c867347e2b18f59618c74ce", default-features = false } # https://github.com/bytecodealliance/wasmtime/pull/13608
web-sys = { version = "0.3.82", default-features = false }
wit-component = { version = "0.240.0", default-features = false }
