[workspace]
resolver = "3"
members = ["crates/*"]
# `test-components` builds the `wasm32` example guests in its `build.rs`, so it
# is kept out of the default set: a plain `cargo build`/`cargo test` at the root
# does not pull in that guest build. It is built only when the crates that
# dev-depend on it (the `cli`/`runtime` integration tests) are tested.
default-members = ["crates/cli", "crates/runtime", "crates/web"]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = { version = "1.0.102", default-features = false }
bytes = { version = "1", default-features = false }
clap = { version = "4.6.1", default-features = false }
console_error_panic_hook = { version = "0.1.7", default-features = false }
cranelift-codegen = { git = "https://github.com/bytecodealliance/wasmtime", rev = "a260163e20dd5bb92a3a9df093c9e229e2b4f8df", default-features = false }
futures = { version = "0.3", default-features = false, features = [
    "std",
    "async-await",
] }
httparse = { version = "1.10", default-features = false }
js-sys = { version = "0.3.98", default-features = false }
reqwest = { version = "0.12", default-features = false }
serde = { version = "1.0.228", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = { version = "1.0.150", default-features = false, features = [
    "alloc",
] }
sha2 = { version = "0.10.9", default-features = false }
starstream-run = { version = "0.1.0", path = "crates/runtime" }
tempfile = { version = "3.27.0", default-features = false }
test-components = { version = "0.1.0", path = "crates/test-components" }
tokio = { version = "1", default-features = false }
tokio-util = { version = "0.7", default-features = false }
tokio-websockets = { version = "0.13", default-features = false }
tracing = { version = "0.1.44", default-features = false }
tracing-subscriber = { version = "0.3.23", default-features = false }
wasi-preview1-component-adapter-provider = { version = "45.0.1", default-features = false }
wasm-bindgen = { version = "=0.2.121", default-features = false }
wasm-bindgen-futures = { version = "0.4.71", default-features = false }
wasm-tokio = { version = "0.6", default-features = false }
wasmparser = { version = "0.251.0", default-features = false }
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", rev = "a260163e20dd5bb92a3a9df093c9e229e2b4f8df", default-features = false }
web-sys = { version = "0.3.98", default-features = false }
wit-bindgen-wrpc = { git = "https://github.com/bytecodealliance/wrpc", rev = "032b10599a31b2290e18a4350cb19d83dd509e68", default-features = false }
wit-component = { version = "0.251.0", default-features = false }
wit-parser = { version = "0.251.0", default-features = false, features = [
    "std",
] }
wrpc-transport = { git = "https://github.com/bytecodealliance/wrpc", rev = "032b10599a31b2290e18a4350cb19d83dd509e68", default-features = false }
wrpc-websockets = { git = "https://github.com/bytecodealliance/wrpc", rev = "032b10599a31b2290e18a4350cb19d83dd509e68", default-features = false }
