[package]
name = "starstream-run-cli"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = [
    "color",
    "derive",
    "error-context",
    "help",
    "std",
    "string",
    "suggestions",
    "usage",
] }
sha2 = { workspace = true }
starstream-run = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "ansi",
    "env-filter",
    "fmt",
    "smallvec",
    "tracing-log",
] }
wasmtime = { workspace = true, features = ["wave"] }

[dev-dependencies]
tempfile = { workspace = true }
test-components = { workspace = true }
